development : resolved issues for user notification and message bubble alignment

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -59,6 +59,20 @@
       margin-bottom:5px;
     }
   }
+  .bubble_user_icon{
+    float: left;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgb(174, 213, 174);
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 7px;
+    margin-left: -4px;
+    margin-right: 10px;
+    text-align:center;
+  }
   .user-thumb{
     border-left: 4px solid #ccc;
   }
@@ -87,6 +101,9 @@
   }
   .pull-right{
     text-align:right;
+  }
+  .pull-left{
+    text-align:left;
   }
   /* CSS talk bubble */
 }
